[package]
name = "underscore"
version = "0.1.0"
authors = ["LenardPratt <striderman34@gmail.com>"]

[dependencies]
structopt = "0.1.6"
structopt-derive = "0.1.6"
underscore_syntax =  {path="../underscore_syntax"}
underscore_util =  {path="../underscore_util"}
underscore_semant = {path ="../underscore_semant"}
underscore_x86 = {path ="../underscore_x86"}
underscore_ir = {path="../underscore_ir"}

[dependencies.underscore_vm]
path = "../underscore_vm"
features = ["debug"]
[[test]]
name ="underscore_test"
path ="../tests/underscore_test.rs"
harness = false

[dev-dependencies]
walkdir = "2"
ansi_term = "0.10"